Description: - Fixed environment variables - Pushing environment variables to make it easy for the students. - Added CORS support - Fetch example on index.html - Added delay on the request to simulate loading times. - Removed image from models to make it easy for students.
