# server/common/api.yml
@@ -39,10 +39,6 @@ definitions:
         type: string
         nullable: true
         example: 'Pepe'
-      image:
-        type: string
-        example: 'assets/dog.jpg'
-        readOnly: true
       type:
         type: string
         example: 'dog'
@@ -103,7 +99,7 @@ paths:
         - Animals
       description: Create a new animal for adopt
       consumes:
-      - "multipart/form-data"
+      - "application/json"
       produces:
       - "application/json"
       parameters:
@@ -113,11 +109,6 @@ paths:
           required: true
           schema: 
             $ref: "#/definitions/Animal"
-        - name: "image"
-          in: "formData"
-          description: "Animal image to upload"
-          required: false
-          type: "file"
       responses:
         201:
           description: Returns new created animal
@@ -152,7 +143,7 @@ paths:
         - name: id
           in: path
           required: true
-          description: The id of the animal to retrieve
+          description: The id of the animal to update
           type: integer
         - name: Animal
           in: body
